# game_hub_test_project

./: .env_db  .gitignore  pyproject.toml
src/core/: settings.py  urls.py
src/templates/: index.html
src/url_checker/: admin.py  choices.py  models.py  urls.py  utils.py  views.py
src/url_checker/migrations/: 0001_initial.py  0002_alter_userpassedlink_status.py  0003_alter_userpassedlink_status.py
