[tool.poetry]
name = "game_hub"
version = "0.1.0"
description = "This is test project"
authors = ["rainbow pony"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2"
python-dotenv = "^0.20.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
